--- a/TestProj_ABP_Frontend/angular.json
+++ b/TestProj_ABP_Frontend/angular.json
@@ -31,7 +31,7 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
+            "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
               "src/assets"
