--- a/TestProj_ABP_Backend/TestProj_ABP_Backend/appsettings.json
+++ b/TestProj_ABP_Backend/TestProj_ABP_Backend/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TestProj_ABP_Db;Persist Security Info=True;User ID=app_connection_login;Password=123456"
-  }
+  },
+  "ColorTestStart": "2023-02-26 15:00",
+  "PriceTestStart": "2023-02-26 15:00"
 }
